--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@automerge/automerge": "^2.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "automerge-wasm": "^0.1.6",
+        "craco": "^0.0.3",
+        "craco-wasm": "^0.0.1",
         "fs": "^0.0.1-security",
         "gh-pages": "^5.0.0",
         "react": "^18.2.0",
@@ -17,10 +21,10 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "craco eject"
     },
     "eslintConfig": {
         "extends": [
